logs/mivrhash.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mivrhash'...
Compiling './lib/python3.5/site-packages/mivrhash/mivrhashclient.py'...
***   File "./lib/python3.5/site-packages/mivrhash/mivrhashclient.py", line 442
    print "MivRHash client testing ..."
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mivrhash/mivrhashservice.py'...
***   File "./lib/python3.5/site-packages/mivrhash/mivrhashservice.py", line 24
    print "Accepted: %s:%d" % addr
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mivrhash/testsuite'...
Compiling './lib/python3.5/site-packages/mivrhash/testsuite/mivrhashtest.py'...
***   File "./lib/python3.5/site-packages/mivrhash/testsuite/mivrhashtest.py", line 33
    print "Inserted 10000 entries"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mivrhash/testsuite/speed_test.py'...
***   File "./lib/python3.5/site-packages/mivrhash/testsuite/speed_test.py", line 16
    print "Inserting 1000000 items ..."
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mivrhash-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
